Adding /svg to svg refs

--- a/web/landing/pages/15-15.html
+++ b/web/landing/pages/15-15.html
@@ -59,7 +59,7 @@
                             data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                             aria-expanded="false">
                             <svg class="svg-icon svg-menu" aria-hidden="true" focusable="false">
-                                <use xlink:href="svg-icons/icon-sprite.svg#menu"></use>
+                                <use xlink:href="/svg-icons/icon-sprite.svg#menu"></use>
                             </svg>
                             <span class="sr-only">Menu</span>
                         </button>
@@ -71,7 +71,7 @@
                                 data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                                 aria-expanded="false">
                                 <svg class="svg-icon svg-close" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#close"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#close"></use>
                                 </svg>
                                 <span class="sr-only">Fermer le menu</span>
                             </button>
@@ -141,7 +141,7 @@
                                         aria-label="Accessibilité" data-toggle="collapse" data-target="#collapseAccess"
                                         aria-controls="collapseAccess" aria-expanded="false">
                                         <svg class="svg-icon svg-access" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#access"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#access"></use>
                                         </svg>
                                         <span class="title-responsive">Accessibilité</span>
                                     </button>
