--- a/web/landing/pages/actualites.html
+++ b/web/landing/pages/actualites.html
@@ -66,7 +66,7 @@
                             data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                             aria-expanded="false">
                             <svg class="svg-icon svg-menu" aria-hidden="true" focusable="false">
-                                <use xlink:href="svg-icons/icon-sprite.svg#menu"></use>
+                                <use xlink:href="/svg-icons/icon-sprite.svg#menu"></use>
                             </svg>
                             <span class="sr-only">Menu</span>
                         </button>
@@ -78,7 +78,7 @@
                                 data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                                 aria-expanded="false">
                                 <svg class="svg-icon svg-close" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#close"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#close"></use>
                                 </svg>
                                 <span class="sr-only">Fermer le menu</span>
                             </button>
@@ -151,7 +151,7 @@
                                         aria-label="Accessibilité" data-toggle="collapse" data-target="#collapseAccess"
                                         aria-controls="collapseAccess" aria-expanded="false">
                                         <svg class="svg-icon svg-access" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#access"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#access"></use>
                                         </svg>
                                         <span class="title-responsive">Accessibilité</span>
                                     </button>
@@ -219,11 +219,11 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/index.html">Accueil<svg
                                         class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item"><a href="#">Le Hub santé <svg class="svg-icon svg-angle-right"
                                         aria-hidden="true" focusable="false">
-                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item active" aria-current="page">Les actualités du Hub Santé</li>
                         </ol>
@@ -480,7 +480,7 @@
                                 <a class="m-social__link" href="http://linkedin.com" target="_blank" rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-linkedin" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#linkedin"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#linkedin"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">linkedin</span>
@@ -491,7 +491,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#twitter"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">twitter</span>
@@ -503,7 +503,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-youtube" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#youtube"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#youtube"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">youtube</span>
@@ -514,7 +514,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-rss" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#rss"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#rss"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">rss</span>
@@ -532,19 +532,19 @@
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentations</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/contacts.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Contactez-nous</a>
                         </li>
                     </ul>
