--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -66,7 +66,7 @@
                             data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                             aria-expanded="false">
                             <svg class="svg-icon svg-menu" aria-hidden="true" focusable="false">
-                                <use xlink:href="svg-icons/icon-sprite.svg#menu"></use>
+                                <use xlink:href="/svg-icons/icon-sprite.svg#menu"></use>
                             </svg>
                             <span class="sr-only">Menu</span>
                         </button>
@@ -78,7 +78,7 @@
                                 data-toggle="collapse" data-target="#menuPrincipal" aria-controls="menuPrincipal"
                                 aria-expanded="false">
                                 <svg class="svg-icon svg-close" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#close"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#close"></use>
                                 </svg>
                                 <span class="sr-only">Fermer le menu</span>
                             </button>
@@ -149,7 +149,7 @@
                                         aria-label="Accessibilité" data-toggle="collapse" data-target="#collapseAccess"
                                         aria-controls="collapseAccess" aria-expanded="false">
                                         <svg class="svg-icon svg-access" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#access"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#access"></use>
                                         </svg>
                                         <span class="title-responsive">Accessibilité</span>
                                     </button>
@@ -217,11 +217,11 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/index.html">Accueil<svg
                                         class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item"><a href="#">Accompagnement <svg class="svg-icon svg-angle-right"
                                         aria-hidden="true" focusable="false">
-                                        <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                        <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                     </svg></a></li>
                             <li class="breadcrumb-item active" aria-current="page">Webinaires</li>
                         </ol>
@@ -437,7 +437,7 @@
                                 <a class="m-social__link" href="http://linkedin.com" target="_blank" rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-linkedin" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#linkedin"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#linkedin"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">linkedin</span>
@@ -448,7 +448,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-twitter" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#twitter"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#twitter"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">twitter</span>
@@ -460,7 +460,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-youtube" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#youtube"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#youtube"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">youtube</span>
@@ -471,7 +471,7 @@
                                     rel="nofollow">
                                     <div class="m-social__icon">
                                         <svg class="svg-icon svg-rss" aria-hidden="true" focusable="false">
-                                            <use xlink:href="svg-icons/icon-sprite.svg#rss"></use>
+                                            <use xlink:href="/svg-icons/icon-sprite.svg#rss"></use>
                                         </svg>
                                     </div>
                                     <span class="sr-only">rss</span>
@@ -489,19 +489,19 @@
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Documentations</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Webinaires</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/contacts.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
-                                    <use xlink:href="svg-icons/icon-sprite.svg#angle-right"></use>
+                                    <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
                                 </svg>Contactez-nous</a>
                         </li>
                     </ul>
@@ -549,7 +549,7 @@
                 <h1 class="modal-title" id="modalVideoLabelTeaser">Video</h1>
                 <button type="button" data-dismiss="modal" class="btn btn--close btn--icon-only">
                     <svg class="svg-icon svg-close" aria-hidden="true" focusable="false">
-                        <use xlink:href="svg-icons/icon-sprite.svg#close"></use>
+                        <use xlink:href="/svg-icons/icon-sprite.svg#close"></use>
                     </svg>
                     <span class="sr-only">Fermer : Video</span>
                 </button>
