Liste de Fichiers workng

--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -267,7 +267,7 @@
                 <div class="o-paragraph--files row col--eq-height mt-4 text-white">
 
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                        <a href="#" class="m-file bg-gray-800 rounded-sm top-left-radius-0 ">
+                        <div class="m-file bg-gray-600 rounded-sm top-left-radius-0 ">
                             <p class="m-file__title h3 text-white"> Démonstration #3</p>
                             <p class="m-file__title h4 text-white"> Lundi x mois 2023 de 10h00 à 12h
                             </p>
@@ -276,7 +276,7 @@
                                 Do consequat velit culpa ipsum et minim proident eiusmod consectetur tempor occaecat
                                 minim dolore.</p>
 
-                        </a>
+                        </div>
                     </div>
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
                         <a href="#" class="m-file bg-gray-800 rounded-sm top-left-radius-0">
