--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -335,7 +335,7 @@
                                             <h2>Démonstration #1 - Lundi 5 juin 2023 </h2>
                                             <div class="wysiwyg mb-3">
                                                 <p>Principalement orientée pour les équipes internes du programme
-                                                    SI-SAMU ainsi que nos partenaires métiers, cette première
+                                                    SI-SAMU ainsi que nos partenaires métiers et ARS, cette première
                                                     démonstration du Hub Santé est constituée d'une présentation globale
                                                     du projet et d'une démonstration technique de la plateforme.</p>
                                             </div>
