Minor fixes on contacts

--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -264,7 +264,8 @@
                         <div class="col-md-8">
                             <h2>Contactez-nous</h2>
                             <div class="wysiwyg mb-3">
-                                <p>Pour toutes vos questions, vous pouvez nous solliciter par email.</p>
+                                <p>Pour toutes vos questions, vous pouvez nous solliciter par email à l'adresse
+                                    hubsante.contact@esante.gouv.fr.</p>
                             </div>
                             <div class="paragraph--lien">
                                 <a href=mailto:hubsante.contact@esante.gouv.fr
@@ -299,7 +300,7 @@
                             </div>
                             <div class="paragraph--lien">
                                 <a href="https://airtable.com/shrL8gqPvYzpv4h26"
-                                    class="btn btn--style1 external-link btn--white">Feedback</a>
+                                    class="btn btn--style1 external-link btn--white" target="_blank">Feedback</a>
                             </div>
                         </div>
                     </div>
