--- a/web/landing/pages/contacts.html
+++ b/web/landing/pages/contacts.html
@@ -196,7 +196,7 @@
 
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
-        <main class="main" role="main" id="main" tabindex="-1">
+        <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
 
 
             <!-- Bannière page interne -->
@@ -265,7 +265,7 @@
                             <h2>Contactez-nous</h2>
                             <div class="wysiwyg mb-3">
                                 <p>Pour toutes vos questions, vous pouvez nous solliciter par email à l'adresse
-                                    hubsante.contact@esante.gouv.fr.</p>
+                                    <I>hubsante.contact@esante.gouv.fr.</I></p>
                             </div>
                             <div class="paragraph--lien">
                                 <a href=mailto:hubsante.contact@esante.gouv.fr
@@ -412,7 +412,7 @@
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Documentations</a>
+                                </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
