--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -195,7 +195,7 @@
 
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
-        <main class="main" role="main" id="main" tabindex="-1">
+        <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
 
 
             <!-- Bannière page interne -->
@@ -248,10 +248,11 @@
             </div>
 
             <!-- Titre 15-18 -->
-            <div class="container paragraph-space paragraph--title-text text-center py-3">
+            <div class="bg-white">
+                <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
                 <h1>15-18</h1>
             </div>
-
+        </div>
             <!-- Bannière Enjeux 15-18 -->
             <div class="container paragraph-space">
                 <div class="row">
@@ -295,9 +296,11 @@
             </div>
 
             <!-- Titre 15-15 -->
-            <div class="container paragraph-space paragraph--title-text text-center py-3">
+            <div class="bg-white">
+                <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
                 <h1>15-15</h1>
             </div>
+        </div>
 
             <!-- Bannière Enjeux 15-15 -->
             <div class="container paragraph-space">
@@ -449,7 +452,7 @@
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Documentations</a>
+                                </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
