--- a/web/landing/pages/webinaires.html
+++ b/web/landing/pages/webinaires.html
@@ -197,7 +197,7 @@
 
     <div class="body-wrapper">
         <!-- Emplacement du Header -->
-        <main class="main" role="main" id="main" tabindex="-1">
+        <main class="main bg-drop bg-drop--reverse bg-white" role="main" id="main" tabindex="-1">
 
 
             <!-- Bannière page interne -->
@@ -256,7 +256,7 @@
 
 
 
-            <!-- Bannière Prochain rendez-vous -->
+            <!-- Bannière Prochains rendez-vous -->
 
             <div class="container paragraph-space">
                 <div class="paragraph__header row justify-content-center">
@@ -267,7 +267,7 @@
                 <div class="o-paragraph--files row col--eq-height mt-4 text-white">
 
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                        <div class="m-file bg-gray-600 rounded-sm top-left-radius-0 ">
+                        <div class="m-file bg-default rounded-md top-left-radius-0 ">
                             <p class="m-file__title h3 text-white"> Démonstration #3</p>
                             <p class="m-file__title h4 text-white"> Lundi x mois 2023 de 10h00 à 12h
                             </p>
@@ -279,7 +279,7 @@
                         </div>
                     </div>
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                        <a href="#" class="m-file bg-gray-800 rounded-sm top-left-radius-0">
+                        <div class="m-file bg-default rounded-md top-left-radius-0">
                             <p class="m-file__title h3 text-white"> Hackathon</p>
                             <p class="m-file__title h4 text-white"> Lundi x mois 2023 de 10h00 à 12h
                             </p>
@@ -288,10 +288,10 @@
                                 Do consequat velit culpa ipsum et minim proident eiusmod consectetur tempor occaecat
                                 minim dolore.</p>
 
-                        </a>
+                            </div>
                     </div>
                     <div class="o-paragraph--files__item col--eq-height col-md-6 mb-3">
-                        <a href="#" class="m-file bg-gray-800 rounded-sm top-left-radius-0">
+                        <div class="m-file bg-default rounded-md top-left-radius-0">
                             <p class="m-file__title h3 text-white"> Kick-off 15-15 </p>
                             <p class="m-file__title h4 text-white"> Lundi x mois 2023 de 10h00 à 12h
                             </p>
@@ -300,7 +300,7 @@
                                 Do consequat velit culpa ipsum et minim proident eiusmod consectetur tempor occaecat
                                 minim dolore.</p>
 
-                        </a>
+                            </div>
 
 
 
@@ -490,7 +490,7 @@
                             <a href="/pages/15-18.html">
                                 <svg class="svg-icon svg-angle-right" aria-hidden="true" focusable="false">
                                     <use xlink:href="/svg-icons/icon-sprite.svg#angle-right"></use>
-                                </svg>Documentations</a>
+                                </svg>Documentation</a>
                         </li>
                         <li class="footer-list__item footer-list__item--hasIcon">
                             <a href="/pages/webinaires.html">
