Fixing mobile display

--- a/web/landing/index.html
+++ b/web/landing/index.html
@@ -269,11 +269,11 @@
             </div>
 
             <!-- Bandeau gris -->
-            <div class="bg-default py-2">
-                <div class="container" style="display: flex; justify-content: space-around;">
-                    <a href="/pages/actualites.html" class="btn btn--style1 btn--white">Actualités</a>
-                    <a href="/pages/webinaires.html" class="btn btn--style1 btn--white">Webinaires</a>
-                    <a href="/resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white"
+            <div class="bg-default pt-1 pb-2">
+                <div class="container" style="display: flex; justify-content: space-around; flex-wrap: wrap;">
+                    <a href="/pages/actualites.html" class="btn btn--style1 btn--white mt-1">Actualités</a>
+                    <a href="/pages/webinaires.html" class="btn btn--style1 btn--white mt-1">Webinaires</a>
+                    <a href="/resources/si_samu-ficheproduit-hub.pdf" class="btn btn--style1 btn--white mt-1"
                         target="_blank">Fiche Hub Santé
                         (pdf)</a>
                 </div>
