--- a/web/landing/pages/travaux.html
+++ b/web/landing/pages/travaux.html
@@ -250,9 +250,9 @@
             <!-- Titre 15-18 -->
             <div class="bg-white">
                 <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
-                <h1>15-18</h1>
+                    <h1>15-18</h1>
+                </div>
             </div>
-        </div>
             <!-- Bannière Enjeux 15-18 -->
             <div class="container paragraph-space">
                 <div class="row">
@@ -278,7 +278,7 @@
                             <a href="/pages/15-18.html" class="btn btn--style1 btn--white">Ressources 15-18</a>
                         </div>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 order-md-last">
                         <div class="rounded-md top-left-radius-0 bg-primary text-white px-3 py-4">
                             <div class="wysiwyg">
                                 <h3>Les pilotes</h3>
@@ -298,31 +298,13 @@
             <!-- Titre 15-15 -->
             <div class="bg-white">
                 <div class="container paragraph-space paragraph--title-text text-center pt-2 pb-1">
-                <h1>15-15</h1>
+                    <h1>15-15</h1>
+                </div>
             </div>
-        </div>
 
             <!-- Bannière Enjeux 15-15 -->
             <div class="container paragraph-space">
                 <div class="row">
-                    <div class="col-md-4">
-                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-lg-3 py-lg-4">
-                            <div class="wysiwyg">
-                                <h3>Les pilotes</h3>
-                                <ul>
-                                    <li>SAMU 59 (Appligos), 62 (Inetum), 76B (RRAMU) et 80 (Exos)
-                                    </li>
-                                    <li>SAMU 78 (Appligos), et 95 (Scriptal)
-                                    </li>
-                                    <li>SAMU 35 (Inetum) et 56 (Inetum)
-                                    </li>
-                                    <li>SAMU 09 (Bisom)
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-
                     <div class="col-md-8 mb-3">
                         <h2>Les enjeux du 15-15 </h2>
                         <div class="wysiwyg mb-3">
@@ -344,7 +326,23 @@
                             <a href="/pages/15-15.html" class="btn btn--style1 btn--white">Ressources 15-15</a>
                         </div>
                     </div>
-
+                    <div class="col-md-4 order-md-first">
+                        <div class="rounded-md top-left-radius-0 bg-primary text-white px-3 py-4">
+                            <div class="wysiwyg">
+                                <h3>Les pilotes</h3>
+                                <ul>
+                                    <li>SAMU 59 (Appligos), 62 (Inetum), 76B (RRAMU) et 80 (Exos)
+                                    </li>
+                                    <li>SAMU 78 (Appligos), et 95 (Scriptal)
+                                    </li>
+                                    <li>SAMU 35 (Inetum) et 56 (Inetum)
+                                    </li>
+                                    <li>SAMU 09 (Bisom)
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
